# rapp

./: .env.example  .gitignore  LSTM_CONFIG_SUMMARY.md  README.md  main.py  pyproject.toml
scripts/: 541_LibriVox_en_seq_24.rttm  scan.py  scan.slurm  vad.py  vad.slurm  vad_pyannote.py  vad_pyannote.slurm  vad_ten.py  vad_ten.slurm  vad_utils.py
scripts/encode/: encode.py  run.slurm
scripts/swuggy/: README.md  __init__.py  analysis.py  evaluate.py  run.slurm  utils.py
scripts/train/: README.md  datasets.py  debug.slurm  debug_compare.slurm  debug_compare_models.py  debug_convergence.py  debug_convergence.slurm  debug_lstm.py  models.py  run.slurm  train.py  utils.py
scripts/vad/: pyannote.py  pyannote.slurm  tenvad.py  tenvad.slurm
