[project]
name = "rapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyannote-audio>=4.0.3",
    "torch>=2.8.0",
    "polars>=1.8.0",
    "tqdm>=4.67.1",
    "ten-vad>=1.0.6.8",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
    "ipykernel>=7.1.0",
]
